--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
     <!-- Hero Section-->
-    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
+    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%; padding-bottom: 2rem;">
       <div class="container">
         <div class="row py-5">
           <div class="col-lg-7 py-6">
@@ -77,7 +77,7 @@
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body p-5">
+                <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/north-logo.png" alt="" width="250"></a>
                 </div>
               </div>
@@ -101,14 +101,14 @@
              <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body p-5">
+                <div class="card-body">
                 </div>
               </div>
             </div>
             <div class="col-lg-2 col-md-6">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-4 text-left">
-                <div class="card-body p-5">
+                <div class="card-body">
                   <a class="logo-img" href="#"><img src="img/idi-logo.png" alt="" width="250"></a>
                 </div>
               </div>
