--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@
     <section class="bg-center py-0" id="team" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
       <section class="about py-0">
         <div class="container">
-          <p class="h6 text-uppercase text-primary">Affiliations </p>
-          <h2 class="mb-5"> </h2>
-          <div class="row pb-5">
+          <p class="h6 text-uppercase text-primary">Affiliations </p> <br />
+           <div class="row pb-5">
             <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 logo">
               <!-- Services Item-->
               <div class="cardl border-0 shadow rounded-lg py-0" style=" padding: 1rem; ">
                 <div class="card-body">
-                  <a class="logo-img rsn" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
+                  <a class="logo-img1 rsn" href="#"><img src="img/RSNNE.png" alt="" width="250"></a>
                 </div>
               </div>
             </div>
