--- a/about.html
+++ b/about.html
@@ -77,9 +77,8 @@
           <div class="row align-items-center mb-5">
             <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="img/objects.svg" alt=""></div>
             <div class="col-lg-6">
-              <h2>The Best Business Solutions Guide for You</h2>
-              <p class="text-muted">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore magna aliqua enim ad minim veniam quis nostrud exercitation.</p>
-              <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i class="fas fa-play-circle mr-2"></i>Play video</button>
+              <h2>Aims and Outcomes</h2>
+              <p class="text-muted">Our first aim is to gather feedback on an initial set of questions to get an overview of some of the views and knowledge from organisations in the region. This initial consultation is being carried out by Northumbria University on behalf of the Regional Stakeholder Network.</p>
             </div>
           </div>
           <div class="row align-items-center">
