--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       </nav>
     </header>
     <!-- Hero Section-->
-    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
+    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%; padding-bottom: 1rem !important">
       <div class="container">
         <div class="row py-5">
           <div class="col-lg-7 py-6">
